--- a/style.css
+++ b/style.css
@@ -40,3 +40,12 @@ h1 {
     transform: translateY(100%);
     margin-bottom: 80px;
 }
+
+p {
+    width: 100%;
+    max-width: 500px;
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
