--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@
 }
 
 h1 {
-    color: #ffffff;
+    color: #313131;
+    text-align: center;
     font-family: berlin sans fb;
     font-weight: 100px;
     font-size: 60px;
