--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #414141;
+}
+
 .portada {
     width: 100%;
     height: 400px;
@@ -33,7 +37,7 @@
 }
 
 h1 {
-    color: #313131;
+    color: #ffffff;
     text-align: center;
     font-family: berlin sans fb;
     font-weight: 100px;
