--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
     
     .seccionCarrusel {
         margin-top: 100px;
-        margin-bottom: 100px;
+        margin-bottom: 0px;
         margin-left: 100px;
         margin-right: 100px;
     }
@@ -83,13 +83,14 @@
     .alert {
         text-align: center;
     }
-    
+    /**
     * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
         font-size: 0;
     }
+    **/
     
     nav a {
         text-decoration: none;
@@ -123,4 +124,29 @@
         position: absolute;
         top: 30px;
         left: 0px;
+    }
+    
+    footer {
+        background-color: #1A1A1A;
+        height: 50%;
+        color: white;
+        padding: 15px;
+    }
+    
+    .main1 {
+        display: flex;
+        margin: 0 auto;
+    }
+    
+    a img:hover {
+        color: #fff;
+    }
+    
+    .pieCarrusel {
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+    
+    .barraMenu {
+        margin-bottom: 20px;
     }
