--- a/style.css
+++ b/style.css
@@ -84,6 +84,8 @@
     
     .alert {
         text-align: center;
+        margin-left: 100px;
+        margin-right: 100px;
     }
     
     nav a {
