--- a/style.css
+++ b/style.css
@@ -614,7 +614,8 @@ body{
 }
 
 .app-form-group.message {
-  margin-top: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .app-form-group.buttons {
@@ -938,4 +939,21 @@ footer{
   padding: 3px;
   position: absolute;
 
+}
+
+
+.celu{
+  display: flex;
+  margin-bottom: 0;
+}
+
+.verificador{
+  margin-bottom: 0;
+margin-top: 8px;
+margin-right: 5px;
+color: #f5d000;
+}
+
+#itMensaje{
+  height: 60px;
 }
