--- a/style.css
+++ b/style.css
@@ -11,8 +11,12 @@ body{
     .divMenu {
         color: #ffffff;
         font-family: Arial, Helvetica, sans-serif;
-        background: #303030e0;
-        
+        background: #000000;
+        position: fixed;
+        width: 100%;
+        height: 5vh;
+
+        z-index: 2;
     }
     
     .contIzq {
@@ -56,6 +60,7 @@ body{
   padding: 4px 0;
   transition: all 0.3s ease;
   background-color: #ffbc03ce; /*FONDO MENÚ*/
+  margin-top: 5vh;
 }
 .navbar.sticky{
   background: #222222;
@@ -125,6 +130,14 @@ body{
   top: 20px;
 }
 
+@media screen and (max-width: 767px){
+  .navbar{
+    margin-top: 8vh;
+  }
+  .divMenu{
+    height: 10vh;
+  }
+}
 
 @media (max-width: 1230px) {
   .contentmenu{
@@ -186,6 +199,9 @@ body{
   .navbar .logo a{
     font-size: 27px;
   }
+
+
+
 } /*-------------FIN-------------*/
 
 
