--- a/style.css
+++ b/style.css
@@ -300,6 +300,11 @@ body{
     padding: 0px;
 }
 
+.infosec2{
+  padding: 0;
+  margin: 0;
+}
+
 .infoizquierda{
     font-size: 16px;
     text-align: left;
