--- a/style.css
+++ b/style.css
@@ -1006,7 +1006,7 @@ footer{
     border-radius: 50px;
     text-align: center;
     font-size: 30px;
-    box-shadow: 2px 2px 3px rgb(0, 0, 0);
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.329);
     z-index: 100;
 }
 
