--- a/style.css
+++ b/style.css
@@ -733,6 +733,10 @@ body{
   transition: border-color .2s;
 }
 
+.app-form-control-incorrecto {
+  border-bottom: 1px solid rgb(199, 19, 19);
+}
+
 .app-form-control::placeholder {
   color: #666;
 }
