--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+
 /* ✿BODY✿ ◕‿◕*/
 body{
     background-color: #f3f3f3;
@@ -23,7 +27,7 @@ body{
       margin-top: 10px;
     }
     
-    .infowhats{
+    .whats{
       text-align: right;
     }
     
@@ -49,7 +53,7 @@ body{
         font-size: 14px;
       }
 
-      .infoem{
+      .em{
         font-size: 14px;
       }
     }
@@ -62,8 +66,6 @@ body{
 
 
 /*---------MENÚ-----------*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-
 .logo-menu{
   width: 40%;
 }
@@ -170,12 +172,12 @@ body{
     height: 9vh;
   }
 
-  .infowhats{
+  .whats{
     text-align: center;
     
   }
   
-  .infoem{
+  .em{
     text-align: center;
   }
   .clima{
@@ -306,7 +308,6 @@ body{
 .divPortada {
     width: 100%;
     height: 100vh;
-    padding-top: auto;
     padding-left: 0;
     padding-right: 0;
 }
@@ -366,7 +367,7 @@ body{
 /*========== SECCIÓN CONÓCENOS ==========*/
 
 /*--BARRA CONÓCENOS--*/
-#barra-separadora{
+.barra-separadora{
     background-color: #2e2e2e;
     width: auto;
     margin: 20px 0px 30px 0px;
@@ -437,10 +438,6 @@ body{
 /*▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄ SECCIÓN 3 ▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄*/
 
 /*========== SECCIÓN SERVICIOS ==========*/
-
-
-
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 .servicios{
   padding: 0 40px;
   display: flex;
@@ -942,7 +939,6 @@ color: #f5d000;
 /*▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄ FOOTER ▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄*/
 
 /*---INICIO | FOOTER INFERIOR---*/
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 .textofooter{
     color: white;
 }
@@ -1102,6 +1098,16 @@ footer{
 }
 .bottom center a:hover{
   text-decoration: underline;
+}
+
+.bottoncenter{
+  background-color: rgb(24, 24, 24);
+  text-align: center;
+  color: #696969;
+}
+
+.losfrozenteam{
+  color: #f5d000;
 }
 
 .content{
